Add new sample (2.4 diagnostic) for Memory Analysis Training
